@@ -1,5 +1,6 @@
 1.0.5 2011-08-01 08:24:00
   - Localize $package::VERSION during version discovery (MIYAGAWA)
+  - Fix references to Module::Build::ModuleInfo [RT #66133] (DAGOLDEN)
 
 1.0.4 2011-02-03 07:55:00
   - Fix broken metadata.t when @INC has relative paths (JJORE)
